fixed overflow issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,13 +18,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
-  bottom: 180px;
+  /* position: relative;
+  bottom: 100px; */
   /* align-items: center; */
 }
 
 .overflow {
   overflow-x: hidden;
+  margin-top: -350px;
 }
 
 h1 {
@@ -303,6 +304,7 @@ h1 {
   }
   .overflow {
     overflow-x: hidden;
+    margin-top: -350px;
   }
 }
 
@@ -322,6 +324,11 @@ h1 {
     bottom: 20px;
     height: 200px;
     color: white;
+  }
+
+  .overflow {
+    overflow-x: hidden;
+    margin-top: -350px;
   }
 }
 
@@ -345,13 +352,14 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: relative;
-    bottom: 180px;
+    /* position: relative;
+    bottom: 180px; */
     /* align-items: center; */
   }
 
   .overflow {
     overflow-x: hidden;
+    margin-top: -350px;
   }
 
   h1 {
